# project-cpp-with-cmake

./: CMakeLists.txt  Justfile  autopush.sh  main.cpp  readme.md
include/auth/: Admin.hpp  Auth.hpp  IncryptPass.hpp  Staff.hpp  User.hpp
include/menu/: Menu.hpp
include/products/: Product.hpp  ProductManager.hpp
src/auth/: Admin.cpp  Auth.cpp  IncryptPass.cpp  Staff.cpp  User.cpp
src/menu/: menu.cpp
src/products/: Product.cpp  ProductManager.cpp
